Fixed: Alignment of Certification and Runtime on Add Movie

--- a/frontend/src/AddMovie/AddNewMovie/AddNewMovieSearchResult.css
+++ b/frontend/src/AddMovie/AddNewMovie/AddNewMovieSearchResult.css
@@ -92,6 +92,19 @@
   position: relative;
 }
 
+.certification {
+  margin-left: 2px;
+  padding: 0 5px;
+  border: 1px solid;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.runtime {
+  margin-left: 8px;
+  font-size: 16px;
+}
+
 .statusContainer {
   margin-right: 22px;
   font-weight: bold;
@@ -102,11 +115,4 @@
     justify-content: space-between;
     overflow: hidden;
   }
-}
-
-.certification {
-  margin-right: 5px;
-  padding: 0 5px;
-  border: 1px solid;
-  border-radius: 5px;
 }
